# attention_to_visual_markers

package/: CMakeLists.txt  attention_to_visual_markers.xml  package.xml
package/launch/: attention_to_visual_markers.launch
package/src/include/: behavior_pay_attention_to_qr_code.h
package/src/source/: behavior_pay_attention_to_qr_code.cpp
subpackages/qr_code_localizer/: CMakeLists.txt  package.xml
subpackages/qr_code_localizer/launch/: qr_code_localizer.launch
subpackages/qr_code_localizer/src/include/: qr_code_localizer.h
subpackages/qr_code_localizer/src/source/: qr_code_localizer.cpp  qr_code_localizer_main.cpp
subpackages/qr_feature_extractor/: CMakeLists.txt  package.xml
subpackages/qr_feature_extractor/launch/: qr_feature_extractor.launch
subpackages/qr_feature_extractor/src/include/: qr_feature_extractor.h
subpackages/qr_feature_extractor/src/source/: qr_feature_extractor.cpp  qr_feature_extractor_main.cpp
